# aetherfusion

./: .gitignore  AETHERVOICE_HOTFIX.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_REPORT.md  OPEN_SOURCE_BLOCKERS.md  OPEN_SOURCE_RELEASE_REPORT.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: verified-assets.yml
.hotfix-payload/: safe_apply.py.gz.b64
aetherfusion/: __init__.py  __main__.py  cli.py  git_checker.py  utils.py
aetherfusion/applier/: __init__.py  safe_apply.py
aetherfusion/audit/: __init__.py  audit_logger.py
aetherfusion/comparer/: __init__.py  dependencies.py  fusion.py  structure.py  tech_stack.py
aetherfusion/dependency/: __init__.py  dependency_error_extractor.py  dependency_file_parser.py  dependency_planner.py
aetherfusion/importfix/: __init__.py  import_error_extractor.py  import_fix_planner.py  target_indexer.py
aetherfusion/patcher/: __init__.py  dry_run_patch_generator.py
aetherfusion/planner/: __init__.py  fusion_planner.py
reports/: aetherfusion-audit.jsonl  aetherfusion-map.json  aetherfusion-report.md  fusion-patch-components.diff  fusion-patch-components.json  fusion-patch-components.md  fusion-plan-components.json  fusion-plan-components.md
scripts/: smoke_test.py
tests/: test_apply.py  test_comparer.py  test_dependency.py  test_fusion_session.py  test_git_checker.py  test_import_fix.py  test_json_reporter.py  test_patcher.py  test_planner.py  test_repair.py  test_reporter.py  test_rollback_audit.py  test_scanner.py  test_verified_assets.py  test_verify.py
(+47 files in other folders)
